modify about me component

--- a/app/i18n/dictionaries/en.json
+++ b/app/i18n/dictionaries/en.json
@@ -9,7 +9,7 @@
   "hero": {
     "title": "Hi, I'm Clément",
     "subtitle": "Fullstack Web Developer - Rouen, France",
-    "description": "Web developper who can do both frontend and backend, as long as it works and is scalable.",
+    "description": "Web developper passionate about creating functional, performant and scalable web applications with Next.js, React, Node.js, and TypeScript.",
     "aboutMe": "About Me"
   },
   "experience": {
