--- a/app/i18n/dictionaries/fr.json
+++ b/app/i18n/dictionaries/fr.json
@@ -9,7 +9,7 @@
   "hero": {
     "title": "Clément Laumond",
     "subtitle": "Développeur Web Fullstack - Rouen & à distance",
-    "description": "Développeur web passionné par la création d'applications web fonctionnelles, performantes et scalables.",
+    "description": "Développeur web passionné par la création d'applications web fonctionnelles, performantes et scalables avec Next.js, React, Node.js, et TypeScript.",
     "aboutMe": "À propos de moi"
   },
   "experience": {
